--- a/templates/base.html
+++ b/templates/base.html
@@ -8,19 +8,35 @@
     <link href="https://fonts.googleapis.com/css?family=Libre+Baskerville&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="{% static 'css/bootstrap.min.css' %}">
     <link rel="stylesheet" href="{% static 'css/app.css' %}">
+    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     {% block stylesheet %}{% endblock %}
   </head>
   <body>
     {% block body %}
 
-        <div class="header text-center">
-            <h1 class="display-3 font-weight-bolder bg-dark text-white" style="margin-bottom:0">The Oxford College Of Engineering</h1>
-            <h4 class="bg-dark text-white">10th Milestone, Bommanahalli, Hosur Road, Bangalore - 560 068</h4> 
+    <div class="container" id="top-head">
+        <div class="row">
+			<div class="col-md-7 col-xs-10 col-md-offset-1">
+				<div id="logo"><img src="{% static 'img/logo.jpg' %}"  class="img-responsive"></a></div>
+            </div>
+            <div class="col-md-4 col-xs-10 col-md-offset-1" id="top-aside"style="margin:15px">
+                <div>
+                    <i class="fa fa-phone fa-lg" style="color:#0093d4;margin: 5px;"></i>
+                </div>
+                <div>
+                    Call For Enquiry
+                    <br>080 - 6175 4600 / 603 / 601 / 602 / 604</span>
+                    </div>
+
+                </div>
+                
         </div>
+    </div>
 
         <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
             <div class="container">
-              <a class="navbar-brand" href="{% url 'home' %}">Grievance Redressal Portal</a>
+              <a class="navbar-brand" href="{% url 'home' %}">Grievance Redressal Portal For SC/ST</a>
               <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#mainMenu" aria-controls="mainMenu" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
@@ -57,7 +73,22 @@
       {% endblock %}
     </div>
 
-    
+    <footer id="footer">
+
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-6 footer-widget">
+                        
+                        <h6>Developed by 
+                          <a id="myFooter" href="https://github.com/jaagaaish">Aishwarya.R</a> and  <a id="myFooter" href="https://github.com/webb-balson">Balson Gorai</a></h6>
+                             
+                        <p><span class="copyleft">&copy;</span> 2019 Copyleft</p>
+                        
+                    </div>
+                    
+                </div>
+            </div>
+    </footer>
 
     {% endblock body %}
     <script src="{% static 'js/jquery-3.2.1.min.js' %}"></script>
