--- a/templates/home.html
+++ b/templates/home.html
@@ -5,12 +5,12 @@
 {% endblock %}
 
 {% block content %}
+{% if user.is_superuser %}
   <table class="table">
     <thead class="thead-light">
       <tr>
         <th>Divisions</th>
-        <th>Complains</th>
-        <th>Topics</th>
+        <th>Complaint</th>
         <th>Last Complain</th>
       </tr>
     </thead>
@@ -22,18 +22,13 @@
                 <small class="text-muted d-block">{{ division.description }}</small>
               </td>
               <td class="align-middle">
-                {{ division.get_complains_count }}
-              </td>
-              <td class="align-middle">
                 {{ division.topics.count }}
               </td>
               <td class="align-middle">
                 {% with complain=division.get_last_complain %}
                 {% if complain %}
                   <small>
-                    <a href="{% url 'topic_complains' division.pk complain.topic.pk %}">
-                      By {{ complain.created_by.username }} at {{ complain.created_at }}
-                    </a>
+                    {{ complain.created_at }}
                   </small>
                 {% else %}
                   <small class="text-muted">
@@ -46,4 +41,44 @@
         {% endfor %}
     </tbody>
   </table>
+{% endif %}
+{% if not user.is_superuser %}
+
+    <table class="table">
+        <thead class="thead-light">
+          <tr>
+            <th>Divisions</th>
+            <th>Complaint</th>
+            <th>Last Complain</th>
+          </tr>
+        </thead>
+        <tbody>
+            {% for division in divisions %}
+                <tr>
+                  <td>
+                    <a href="{% url 'division_topics_user' division.pk %}">{{ division.name }}</a>
+                    <small class="text-muted d-block">{{ division.description }}</small>
+                  </td>
+                  <td class="align-middle">
+                    {{ division.topics.count }}
+                  </td>
+                  <td class="align-middle">
+                    {% with complain=division.get_last_complain %}
+                    {% if complain %}
+                      <small>
+                        {{ complain.created_at }}
+                      </small>
+                    {% else %}
+                      <small class="text-muted">
+                        <em>No complains yet.</em>
+                      </small>
+                    {% endif %}
+                    {% endwith %}
+                  </td>
+                </tr>
+            {% endfor %}
+        </tbody>
+    </table>
+
+{% endif %}
 {% endblock %}
